feat: add icons via paste

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="playground">
+    <div id="playground" class="playground">
       <div id="code-container" style="border: 1px solid #ccc"></div>
       <div id="bpmn-container" style="border: 1px solid #ccc">
       	<div id="diagram-container"></div>
